# tcpa-optout-integration

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE.txt  Procfile  README.md  SALES_README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  render.yaml
.github/workflows/: railway-deploy.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  health.py  ingest.py  integrations.py  optouts.py
app/core/: __init__.py  config.py  database.py  normalizer.py  security.py  worker.py
app/models/: __init__.py  failed_sync.py  integration.py  optout.py  task.py
app/schemas/: __init__.py  failed_sync.py  integration.py  optout.py  task.py
app/services/: __init__.py  extraction.py  integration_dispatcher.py  optout_service.py
app/templates/: index.html
docs/: carrd-landing.html
sales/: 3-day-playbook.md  dm-batch-1.md  leads-tracker.csv
tests/: conftest.py  test_ingest.py  test_new_features.py  test_worker.py
